create github pages

--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
         <div class="row row-main">
             <div class="col-12 col-lg-6 card mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler form-wrap" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="2mKPnHDCgmrcoU2FNFT/MsaswdVsD6LixTWwQIk/RxxZHOrSUNVAOARMGGPihzkKBcRbkZC+1CMiVfN64Owny/sE7FK30pk1F46KngQLz7ogEXc2wCmKFBGbFb+KcDGD.0sFzVOZkICJq1kaH929dABNwLal5ySXohy6jfPi+c6ZXdHwShoa/G78smAN6PmmODxuK2QWB/WPTVaufGl7J5yGW57aseFycex9JbqjBhwgpjOCoRa8UQYRRKIRzgVH9">
+<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler form-wrap" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="j5MdZxFwzZfcRB22zK8di2EUcYghbvKIDVupY2z0d/+R0BJ+zhPNW1rKR1yJGD8uvz91WNYW+CUTbz7q9Bb51x10TSTrN8zmi2M1ILhKEG0Dv9MrlXs03L2XApIBHY2Y.M/yKXCm1jd3Km45kvy4jEwUiZL0JeuFZiZy84jUi93DM48Kcp5YHH2FLYMVwkCKCNVGCS/Nr5jWHN4nmKAGKN0SuEkm77yIhvhvSupwMkxOnuDVw8P2Iu/scjf9GreVM">
 <div class="row">
-<div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Спасибо за заявку! В ближайшее время с вами свяжется куратор Альфа Банка и направим инструкцию.</div>
+<div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Спасибо за заявку в розыгрыше! Инструкция придет на указанный вами номер телефона. Желаем вам получить свой приз!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12"> Oops...! some problem! </div>
 </div>
 <div class="dragArea row">
